Changes to text of bio and projects.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div id="content">
 					<h1>Sonja Peterson</h1>
 			<img src="prof pic.jpg" width="200" class="rounded float transparent">
-			<p>Hi, I'm Sonja, a senior at Yale majoring in English. I'm interested in the intersections of techology and publishing, and I have experience in marketing, journalism, and online education. I'm currently learning web development through <a href="http://hackyale.com">HackYale's</a> Introduction to Front-end Web Development Programming Intensive.</p>
+			<p>Hi, I'm Sonja, a senior at Yale majoring in English. I'm interested in the intersections of technology and publishing, and I have <a href="http://www.linkedin.com/pub/sonja-peterson/36/136/1b9">experience</a> in marketing, journalism, and online education. I'm currently learning web development through <a href="http://hackyale.com">HackYale's</a> Introduction to Front-end Web Development Programming Intensive.</p>
 			<p>
 		</div>
 	</body>
