Added another project and made some edits to text on project and home pages. Also some minor tweaks to the stylesheet.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<div id="container">
+
 		<div id="sidebar">
 			<ul>
 				<li><a href="index.html">Bio</a></li>
@@ -19,8 +19,8 @@
 		<div id="content">
 					<h1>Sonja Peterson</h1>
 			<img src="prof pic.jpg" width="200" class="rounded float transparent">
-			<p>Hi, I'm Sonja, a senior at Yale majoring in English. I'm interested in the intersections of technology and publishing, and I have <a href="http://www.linkedin.com/pub/sonja-peterson/36/136/1b9">experience</a> in marketing, journalism, and online education. I'm currently learning web development through <a href="http://hackyale.com">HackYale's</a> Introduction to Front-end Web Development Programming Intensive.</p>
-			<p>
+			<p>Hi, I'm Sonja, a senior at Yale majoring in English. I have <a href="http://www.linkedin.com/pub/sonja-peterson/36/136/1b9" target="_blank">experience</a> in marketing, journalism, and online education, and I'm currently learning web development through <a href="http://hackyale.com" target="_blank">HackYale's</a> Introduction to Front-end Web Development Programming Intensive.</p>
+			<p>In my free time I enjoy trail running, nordic skiing, and listening to songs like <a href="http://www.youtube.com/watch?v=Xjdkc14-zwQ" target="_blank">this</a> on repeat.</p>
 		</div>
 	</body>
 </html>
