--- a/projects.html
+++ b/projects.html
@@ -23,32 +23,35 @@
 			<div class="line-divider"></div>
 			<div class="contentsection">
 				<h3>Thinkful Blog Redesign</h3>
-				<a href="http://blog.thinkful.com"><img src="blog-screenshot.png" width="400px" class="imglink"></a>
+				<a href="http://blog.thinkful.com"><img src="blog-screenshot.png" width="400px"  target="_blank"></a>
 				<br>
-				<p>While working as a marketing intern at <a href="http://thinkful.com">Thinkful</a> in the summer of 2013, I redesigned their <a href="http://blog.thinkful.com">blog</a> with a customized CSS Tumblr theme. I also created graphics for the blog using Adobe Illustrator. See more of my graphic design work for Thinkful <a href="http://www.behance.net/sonjapeterson">here.</a></p>
+				<p>While working as a marketing intern at <a href="http://thinkful.com" target="_blank">Thinkful</a> in the summer of 2013, I redesigned their <a href="http://blog.thinkful.com" target="_blank">blog</a> with a customized CSS Tumblr theme. I also created graphics for the blog using Adobe Illustrator. See more of my graphic design work for Thinkful <a href="http://www.behance.net/sonjapeterson" target="_blank">here.</a></p>
 			</div>
 			<h2>Writing</h2>
 			<div class="line-divider"></div>
 			<div class="contentsection">
 				<h3>Lake County News Chronicle</h3>
-				<p>Worked as reporter in the summers of 2010 and 2012, writing 2-3 local news articles per week as well as occasional op-ed columns.</p>
+				<p>I worked at the <i>Chronicle</i> as reporter in the summers of 2010 and 2012, writing 2-3 local news articles per week as well as occasional op-ed columns.</p>
 				<ul>
-					<li><a href="http://www.twoharborsmn.com/event/article/id/20680/" class="articletitle">'Bar Church' draws a crowd</a></li>
-					<li><a href="http://www.twoharborsmn.com/event/article/id/23746/publisher_ID/39/" class="articletitle">Marriage amendment divides Lake County</a></li>
-					<li><a href="http://www.twoharborsmn.com/event/article/id/23804/publisher_ID/39/" class="articletitle">No reining in these riders</a></li>
-					<li><a href="http://www.twoharborsmn.com/event/article/id/23845/publisher_ID/39/" class="articletitle">Column: Kayak race a rare pleasure</a></li>
-					<li><a href="http://www.twoharborsmn.com/event/article/id/20779/publisher_ID/39/" class="articletitle">The unlikely farmer</a></li>
-					<li><a href="http://www.twoharborsmn.com/event/article/id/20793/publisher_ID/39/" class="articletitle">A market grows in Brimson</a></li>
+					<li><a href="http://www.twoharborsmn.com/event/article/id/20680/" class="articletitle" target="_blank">'Bar Church' draws a crowd</a></li>
+					<li><a href="http://www.twoharborsmn.com/event/article/id/23746/publisher_ID/39/" class="articletitle" target="_blank">Marriage amendment divides Lake County</a></li>
+					<li><a href="http://www.twoharborsmn.com/event/article/id/23804/publisher_ID/39/" class="articletitle" target="_blank">No reining in these riders</a></li>
+					<li><a href="http://www.twoharborsmn.com/event/article/id/23845/publisher_ID/39/" class="articletitle" target="_blank">Column: Kayak race a rare pleasure</a></li>
+					<li><a href="http://www.twoharborsmn.com/event/article/id/20779/publisher_ID/39/" class="articletitle" target="_blank">The unlikely farmer</a></li>
+					<li><a href="http://www.twoharborsmn.com/event/article/id/20793/publisher_ID/39/" class="articletitle" target="_blank">A market grows in Brimson</a></li>
 				</ul>
 			</div>
 			<div class="contentsection">
 				<h3>Broad Recognition</h3>
-				<p>Contributed writing to Yale's online feminist magazine.</p>
+				<p>I contribute writing to Yale's online feminist magazine.</p>
 				<ul>
-					<li><a href="http://broadrecognition.com/politics/having-it-all-and-more-anne-marie-slaughter-at-yale-2/" class="articletitle">Having it All and More: Anne-Marie Slaughter at Yale</a></li>
-					<li><a href="http://broadrecognition.com/arts/fatale-issue-2/" class="articletitle">Beyond Binders</a></li>
+					<li><a href="http://broadrecognition.com/politics/having-it-all-and-more-anne-marie-slaughter-at-yale-2/" class="articletitle" target="_blank">Having it All and More: Anne-Marie Slaughter at Yale</a></li>
+					<li><a href="http://broadrecognition.com/arts/fatale-issue-2/" class="articletitle" target="_blank">Beyond Binders</a></li>
 				</uL>
 			</div>
+			<div class="contentsection">
+				<h3>Study Abroad Blog</h3>
+				<p>I spent the spring of 2013 studying abroad at the University of St. Andrews, and wrote about it <a href="http://lochsandtea.wordpress.com/" target="_blank">here</a>.</p>
 		</div>
 	</body>
 </html>
