Updated projects section with new writing.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Sonja Peterson Homework 0 -->
 	<head>
 		<meta charset="utf-8">
 		<title>Sonja Peterson</title>
