--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div id="content">
 					<h1>Sonja Peterson</h1>
 			<img src="prof pic.jpg" width="200" class="rounded float transparent">
-			<p>Hi, I'm Sonja, a senior at Yale majoring in English. I have <a href="http://www.linkedin.com/pub/sonja-peterson/36/136/1b9" target="_blank">experience</a> in marketing, journalism, and online education, and I'm currently learning web development through <a href="http://hackyale.com" target="_blank">HackYale's</a> Introduction to Front-end Web Development Programming Intensive.</p>
+			<p>Hi, I'm Sonja, a senior at Yale majoring in English. I will graduate this May and am seeking employmen that builds on my <a href="http://www.linkedin.com/pub/sonja-peterson/36/136/1b9" target="_blank">past experiences</a> with publishing, journalism, and design.
 			<p>In my free time I enjoy trail running, nordic skiing, and listening to songs like <a href="http://www.youtube.com/watch?v=Xjdkc14-zwQ" target="_blank">this</a> on repeat.</p>
 		</div>
 	</body>
