Fixed broken links.

--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,9 @@
 					<h3>Email: <a href="mailto:sonja.peterson@gmail.com">sonja [dot] peterson [at] gmail [dot] com</h3>
 				</div>
 				<div class="contentsection">
-<div align="center"><a href="linkedin.html"><img src="linkedin-black.png"></a>
-<a href="behance.html"><img src="behance-black.png"></a>
-<a href="twitter.html"><img src="twitter-black.png"></a></div>
+<div align="center"><a href="http://www.linkedin.com/pub/sonja-peterson/36/136/1b9/"><img src="linkedin-black.png"></a>
+<a href="http://www.behance.net/sonjapeterson"><img src="behance-black.png"></a>
+<a href="http://twitter.com/SonjaBPeterson"><img src="twitter-black.png"></a></div>
         
     </a>
         
