Added new project to projects page.

--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,13 @@
 				<br>
 				<p>While working as a marketing intern at <a href="http://thinkful.com" target="_blank">Thinkful</a> in the summer of 2013, I redesigned their <a href="http://blog.thinkful.com" target="_blank">blog</a> with a customized CSS Tumblr theme. I also created graphics for the blog using Adobe Illustrator. See more of my graphic design work for Thinkful <a href="http://www.behance.net/sonjapeterson" target="_blank">here.</a></p>
 			</div>
+
+			<div class="contentsection">
+				<h3>YEI Tech Bootcamp Application Project</h3>
+				<a href="http://sonjapeterson.github.io/yeiproject/"><img src="bookbase.png" width="400px"  target="_blank"></a>
+				<br>
+				<p>I recently applied for the Yale Entrepreneurial Institute's Tech Bootcamp, and for the final round of the applications we were required to create a one-page mockup of the website we would build if technical skills were not an obstacle. My <a href="http://sonjapeterson.github.io/yeiproject/">mockup</a> is for a tool that would help authors create websites with built-in marketing tools, without needing any technical knowledge.</p>
+			</div>
 			<h2>Writing</h2>
 			<div class="line-divider"></div>
 			<div class="contentsection">
