Edited text on index page.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<h1>Sonja Peterson</h1>
 			<img src="prof pic.jpg" width="160" class="rounded float transparent">
 			<br>
-			<p>Hi, I'm Sonja, a senior at Yale majoring in English. I will graduate this May and am seeking full-time work that builds on my <a href="http://www.linkedin.com/pub/sonja-peterson/36/136/1b9" target="_blank">past experiences</a> with publishing, journalism, and design.
+			<p>Hi, I'm Sonja, a senior at Yale majoring in English. I will graduate this May and am seeking full-time work that builds on my <a href="http://www.linkedin.com/pub/sonja-peterson/36/136/1b9" target="_blank">past experiences</a> with publishing, journalism, and design. See some of my past work <a href="projects.html">here.</a>
 			<p>In my free time I enjoy reading, running, and listening to songs like <a href="http://www.youtube.com/watch?v=Xjdkc14-zwQ" target="_blank">this</a> on repeat.</p>
 		</div>
 	</body>
