New design and additional projects

--- a/contact.html
+++ b/contact.html
@@ -4,20 +4,23 @@
 		<meta charset="utf-8">
 		<title>Sonja Peterson</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+				<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Rock+Salt|Fjord+One' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<div id="container">
-		<div id="sidebar">
-			<ul>
-				<li><a href="index.html">Bio</a></li>
-				<li><a href="projects.html">Projects</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-
+		<div id="headercontainer">
+			<div id="header">
+				<h2>Sonja Peterson</h2>
+			<div id="linklist">
+				<ul>
+					<a href="index.html"><li>bio</li></a>
+					<a href="projects.html"><li>projects</li></a>
+					<a href="contact.html"><li>contact</li></a>
+				</ul>
+			</div>
+		</div>
 		</div>
 		<div id="content">
-					<h1>Contact</h1>
 					<div class="contentsection">
 					<h3>Email: <a href="mailto:sonja.peterson@gmail.com">sonja [dot] peterson [at] gmail [dot] com</h3>
 				</div>
