--- a/index.html
+++ b/index.html
@@ -6,23 +6,25 @@
 		<title>Sonja Peterson</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Rock+Salt|Fjord+One' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-
-		<div id="sidebar">
-			<ul>
-				<li><a href="index.html">Bio</a></li>
-				<li><a href="projects.html">Projects</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-
+		<div id="headercontainer">
+			<div id="header">
+				<h2>Sonja Peterson</h2>
+			<div id="linklist">
+				<ul>
+					<a href="index.html"><li>bio</li></a>
+					<a href="projects.html"><li>projects</li></a>
+					<a href="contact.html"><li>contact</li></a>
+				</ul>
+			</div>
+		</div>
 		</div>
 		<div id="content">
-					<h1>Sonja Peterson</h1>
-			<img src="prof pic.jpg" width="160" class="rounded float transparent">
-			<br>
-			<p>Hi, I'm Sonja, a senior at Yale majoring in English. I will graduate this May and am seeking full-time work that builds on my <a href="http://www.linkedin.com/pub/sonja-peterson/36/136/1b9" target="_blank">past experiences</a> with publishing, journalism, sales, and web design. See some of my past work <a href="projects.html">here.</a>
-			<p>In my free time I enjoy reading, running, and listening to songs like <a href="http://www.youtube.com/watch?v=Xjdkc14-zwQ" target="_blank">this</a> on repeat.</p>
+				<img src="prof-pic.png" width="160" class="rounded float">
+				<br>
+				<p class="intro">Hi, I'm Sonja, a senior at Yale majoring in English. I will graduate this May and am seeking full-time work that builds on my <a href="http://www.linkedin.com/pub/sonja-peterson/36/136/1b9" target="_blank">past experiences</a> with publishing, journalism, sales, and web design. See some of my past work <a href="projects.html">here.</a>
 		</div>
 	</body>
 </html>
