--- a/projects.html
+++ b/projects.html
@@ -5,34 +5,41 @@
 		<title>Sonja Peterson</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Rock+Salt|Fjord+One' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<div id="container">
-		<div id="sidebar">
-			<ul>
-				<li><a href="index.html">Bio</a></li>
-				<li><a href="projects.html">Projects</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-
+		<div id="headercontainer">
+			<div id="header">
+				<h2>Sonja Peterson</h2>
+			<div id="linklist">
+				<ul>
+					<a href="index.html"><li>bio</li></a>
+					<a href="projects.html"><li>projects</li></a>
+					<a href="contact.html"><li>contact</li></a>
+				</ul>
+			</div>
+		</div>
 		</div>
 		<div id="content">
-			<h1>Projects</h1>
-			<br>
-			<h2>Web Design</h2>
+			<h2>Design and Web Development</h2>
 			<div class="line-divider"></div>
 			<div class="contentsection">
-				<h3>Thinkful Blog Redesign</h3>
-				<a href="http://blog.thinkful.com"><img src="blog-screenshot.png" width="400px"  target="_blank"></a>
+				<a href="http://blog.thinkful.com"><h3>Thinkful Blog Redesign and Social Media Design</h3></a>
+				<a href="http://blog.thinkful.com"><img src="blog-screenshot.png" width="400px" target="_blank"></a>
 				<br>
 				<p>While working as a marketing intern at <a href="http://thinkful.com" target="_blank">Thinkful</a> in the summer of 2013, I redesigned their <a href="http://blog.thinkful.com" target="_blank">blog</a> with a customized CSS Tumblr theme. I also created graphics for the blog using Adobe Illustrator. See more of my graphic design work for Thinkful <a href="http://www.behance.net/sonjapeterson" target="_blank">here.</a></p>
+			</div>
+			<div class="contentsection">
+				<a href="http://twitter.com/swedensquared"><h3>Visual Tweets, a project for ART 369: Interactive Design</h3></a>
+				<a href="http://twitter.com/swedensquared" target="_blank"><img src="tweets.png" width="400px"></a>
+				<p>This spring I'm <a href="http://twitter.com/swedensquared">tweeting an image</a> created with Photoshop or Illustrator five times a week as part of my Interactive Deesign class. The assignment was to choose a well-known Twitter user and make images that included the text of a tweet and some additional graphic feature. I chose <a href="http://twitter.com/sweden">@sweden</a>, an account which is given to a new, randomly selected Swede each week.</p>
 			</div>
 
 			<div class="contentsection">
 				<h3>YEI Tech Bootcamp Application Project</h3>
 				<a href="http://sonjapeterson.github.io/yeiproject/"><img src="bookbase.png" width="400px"  target="_blank"></a>
 				<br>
-				<p>I recently applied for the Yale Entrepreneurial Institute's Tech Bootcamp, and for the final round of the applications we were required to create a one-page mockup of the website we would build if technical skills were not an obstacle. My <a href="http://sonjapeterson.github.io/yeiproject/">mockup</a> is for a tool that would help authors create websites with built-in marketing tools, without needing any technical knowledge.</p>
+				<p>I recently applied for the Yale Entrepreneurial Institute's Tech Bootcamp, and for the final round of the applications we were required to create a one-page mockup of the website we would build if technical skills were not an obstacle. My <a href="http://sonjapeterson.github.io/yeiproject/">mockup</a> is for a web app that would help authors create websites with built-in marketing tools, without needing any technical knowledge.</p>
 			</div>
 			<h2>Writing</h2>
 			<div class="line-divider"></div>
@@ -62,5 +69,6 @@
 				<h3>Study Abroad Blog</h3>
 				<p>I spent the spring of 2013 studying abroad at the University of St. Andrews, and wrote about it <a href="http://lochsandtea.wordpress.com/" target="_blank">here</a>.</p>
 		</div>
+	</div>
 	</body>
 </html>
