Minor layour changes

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <!-- Sonja Peterson Homework 0 -->
 	<head>
 		<meta charset="utf-8">
-		<title>Sonja Peterson</title>
+		<title>Sonja Peterson: Portfolio</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Rock+Salt|Fjord+One' rel='stylesheet' type='text/css'>
+		<meta name="description" content="Sonja Peterson's writing and design portfolio">
+		<meta name="author" content="Sonja Peterson">
+
 	</head>
 	<body>
 		<div id="headercontainer">
