Edited text on index

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 		<div id="content">
 				<img src="prof-pic.png" width="160" class="rounded float">
 				<br>
-				<p class="intro">Hi, I'm Sonja, a senior at Yale majoring in English. I will graduate this May and am seeking full-time work that builds on my <a href="http://www.linkedin.com/pub/sonja-peterson/36/136/1b9" target="_blank">past experiences</a> with publishing, journalism, sales, and web design. See some of my past work <a href="projects.html">here.</a>
+				<p class="intro">Hi, I'm Sonja, a senior at Yale majoring in English. I will graduate this May and am seeking full-time work that builds on my <a href="http://www.linkedin.com/pub/sonja-peterson/36/136/1b9" target="_blank">past experiences</a> with publishing, journalism, sales, and web design.</p>
+				<h3 style="margin-top: 0">Take a look at my <a href="projects.html">past projects</a>, or <a href="contact.html">get in touch</a>.</h3>
 		</div>
 	</body>
 </html>
