--- a/projects.html
+++ b/projects.html
@@ -30,9 +30,9 @@
 				<p>While working as a marketing intern at <a href="http://thinkful.com" target="_blank">Thinkful</a> in the summer of 2013, I redesigned their <a href="http://blog.thinkful.com" target="_blank">blog</a> with a customized CSS Tumblr theme. I also created graphics for the blog using Adobe Illustrator. See more of my graphic design work for Thinkful <a href="http://www.behance.net/sonjapeterson" target="_blank">here.</a></p>
 			</div>
 			<div class="contentsection">
-				<a href="http://twitter.com/swedensquared"><h3>Visual Tweets, a project for ART 369: Interactive Design</h3></a>
-				<a href="http://twitter.com/swedensquared" target="_blank"><img src="tweets.png" width="400px"></a>
-				<p>This spring I'm <a href="http://twitter.com/swedensquared">tweeting an image</a> created with Photoshop or Illustrator five times a week as part of my Interactive Deesign class. The assignment was to choose a well-known Twitter user and make images that included the text of a tweet and some additional graphic feature. I chose <a href="http://twitter.com/sweden">@sweden</a>, an account which is given to a new, randomly selected Swede each week.</p>
+				<a href="http://www.art.yale.edu/~sonjapeterson/interactive/"><h3>ART 369: Interactive Design</h3></a>
+				<a href="http://www.art.yale.edu/~sonjapeterson/interactive/"><img src="interactivedesign.png" width="400px" target="_blank"></a>
+				<p>This spring semester one of my courses is <a href="http://yaleinteractivedesign.com">Interactive Design</a> with Laurel Schwulst at the Yale School of Art. My <a href="http://www.art.yale.edu/~sonjapeterson/interactive/">class portfolio</a> is in-progress and will be updated throughout the semester. One of my projects was creating <a href="http://www.art.yale.edu/~sonjapeterson/p2/index.html">25 ways</a> of presenting a poem using HTML and CSS, divided into five groups of variations with specific restraints. Another ongoing project involves <a href="http://twitter.com/swedensquared">tweeting an image</a> created with Photoshop or Illustrator five times a week. The assignment was to choose a well-known Twitter user and make images that included the text of a tweet and some additional graphic feature. I chose <a href="http://twitter.com/sweden">@sweden</a>, an account which is given to a new, randomly selected Swede each week.</p>
 			</div>
 
 			<div class="contentsection">
