Some design tweaks

--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
 			<div id="linklist">
 				<ul>
 					<a href="index.html"><li>bio</li></a>
-					<a href="projects.html"><li>projects</li></a>
+					<a href="projects.html" style="color: white;"><li>projects</li></a>
 					<a href="contact.html"><li>contact</li></a>
 				</ul>
 			</div>
