--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 				<ul>
 					<a href="index.html"><li>bio</li></a>
 					<a href="projects.html"><li>projects</li></a>
-					<a href="contact.html"><li>contact</li></a>
+					<a href="contact.html" style="color: white;"><li>contact</li></a>
 				</ul>
 			</div>
 		</div>
@@ -25,9 +25,10 @@
 					<h3>Email: <a href="mailto:sonja.peterson@gmail.com">sonja [dot] peterson [at] gmail [dot] com</h3>
 				</div>
 				<div class="contentsection">
-<div align="center"><a href="http://www.linkedin.com/pub/sonja-peterson/36/136/1b9/"><img src="linkedin-black.png"></a>
-<a href="http://www.behance.net/sonjapeterson"><img src="behance-black.png"></a>
-<a href="http://twitter.com/SonjaBPeterson"><img src="twitter-black.png"></a></div>
+<div align="center"><a href="http://www.linkedin.com/pub/sonja-peterson/36/136/1b9/"><img src="linkedin-black.png" width="40px"></a>
+<a href="http://www.behance.net/sonjapeterson"><img src="behance-black.png" width="40px"></a>
+<a href="http://twitter.com/SonjaBPeterson"><img src="twitter-black.png" width="40px"></a>
+<a href="http://github.com/sonjapeterson"><img src="github.png" width="40px"></a></div>
         
     </a>
         
