--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<h2>Sonja Peterson</h2>
 			<div id="linklist">
 				<ul>
-					<a href="index.html"><li>bio</li></a>
+					<a href="index.html" style="color: white;"><li>bio</li></a>
 					<a href="projects.html"><li>projects</li></a>
 					<a href="contact.html"><li>contact</li></a>
 				</ul>
