--- a/projects.html
+++ b/projects.html
@@ -4,8 +4,7 @@
 		<meta charset="utf-8">
 		<title>Sonja Peterson</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Rock+Salt|Fjord+One' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Quicksand|Open+Sans' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<div id="headercontainer">
