started to create responsive mobile version and changed color scheme

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 				<ul>
 					<a href="index.html"><li>bio</li></a>
 					<a href="projects.html"><li>projects</li></a>
-					<a href="contact.html" style="color: white;"><li>contact</li></a>
+					<a href="contact.html" style="color: #6EB5AD;"><li>contact</li></a>
 				</ul>
 			</div>
 		</div>
