--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<h2>Sonja Peterson</h2>
 			<div id="linklist">
 				<ul>
-					<a href="index.html" style="color: white;"><li>bio</li></a>
+					<a href="index.html" style="color: #6EB5AD;"><li>bio</li></a>
 					<a href="projects.html"><li>projects</li></a>
 					<a href="contact.html"><li>contact</li></a>
 				</ul>
@@ -27,7 +27,7 @@
 				<img src="prof-pic.png" width="160" class="rounded float">
 				<br>
 				<p class="intro">Hi, I'm Sonja, a senior at Yale majoring in English. I will graduate this May and am seeking full-time work that builds on my <a href="http://www.linkedin.com/pub/sonja-peterson/36/136/1b9" target="_blank">past experiences</a> with publishing, journalism, sales, and web design.</p>
-				<h3 style="margin-top: 0">Take a look at my <a href="projects.html">past projects</a>, or <a href="contact.html">get in touch</a>.</h3>
+				<h3 style="margin-top: 0">Take a look at my <a href="projects.html">projects</a>, or <a href="contact.html">get in touch</a>.</h3>
 		</div>
 	</body>
 </html>
