--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Sonja Peterson: Portfolio</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href='http://fonts.googleapis.com/css?family=Quicksand|Open+Sans' rel='stylesheet' type='text/css'>
 		<meta name="description" content="Sonja Peterson's writing and design portfolio">
