Improved responsive design features

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 	</head>
 	<body>
 		<div id="headercontainer">
-			<div id="header">
 				<h2>Sonja Peterson</h2>
 			<div id="linklist">
 				<ul>
@@ -23,10 +22,8 @@
 				</ul>
 			</div>
 		</div>
-		</div>
 		<div id="content">
-				<img src="prof-pic.png" width="160" class="rounded float">
-				<br>
+				<img src="prof-pic.png" width="160" class="float">
 				<p class="intro">Hi, I'm Sonja, a senior at Yale majoring in English. I will graduate this May and am seeking full-time work that builds on my <a href="http://www.linkedin.com/pub/sonja-peterson/36/136/1b9" target="_blank">past experiences</a> with publishing, journalism, sales, and web design.</p>
 				<h3 style="margin-top: 0">Take a look at my <a href="projects.html">projects</a>, or <a href="contact.html">get in touch</a>.</h3>
 		</div>
