--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,6 @@
 	</head>
 	<body>
 		<div id="headercontainer">
-			<div id="header">
 				<h2>Sonja Peterson</h2>
 			<div id="linklist">
 				<ul>
@@ -18,19 +17,18 @@
 				</ul>
 			</div>
 		</div>
-		</div>
 		<div id="content">
 			<h2>Design and Web Development</h2>
 			<div class="line-divider"></div>
 			<div class="contentsection">
 				<a href="http://blog.thinkful.com"><h3>Thinkful Blog Redesign and Social Media Design</h3></a>
-				<a href="http://blog.thinkful.com"><img src="blog-screenshot.png" width="400px" target="_blank"></a>
+				<a href="http://blog.thinkful.com"><img src="blog-screenshot.png" class="screenshot" target="_blank"></a>
 				<br>
 				<p>While working as a marketing intern at <a href="http://thinkful.com" target="_blank">Thinkful</a> in the summer of 2013, I redesigned their <a href="http://blog.thinkful.com" target="_blank">blog</a> with a customized CSS Tumblr theme. I also created graphics for the blog using Adobe Illustrator. See more of my graphic design work for Thinkful <a href="http://www.behance.net/sonjapeterson" target="_blank">here.</a></p>
 			</div>
 			<div class="contentsection">
 				<a href="http://www.art.yale.edu/~sonjapeterson/interactive/"><h3>ART 369: Interactive Design</h3></a>
-				<a href="http://www.art.yale.edu/~sonjapeterson/interactive/"><img src="interactivedesign.png" width="400px" target="_blank"></a>
+				<a href="http://www.art.yale.edu/~sonjapeterson/interactive/"><img src="interactivedesign.png" class="screenshot" target="_blank"></a>
 				<p>This spring semester one of my courses is <a href="http://yaleinteractivedesign.com">Interactive Design</a> with Laurel Schwulst at the Yale School of Art. My <a href="http://www.art.yale.edu/~sonjapeterson/interactive/">class portfolio</a> is in-progress and will be updated throughout the semester. The project I'm currently working on is creating a <a href="http://www.art.yale.edu/~sonjapeterson/p3/index.html">responsive tutorial website</a> for Yale students in introductory writing classes. Another ongoing project involves <a href="http://twitter.com/swedensquared">tweeting an image</a> created with Photoshop or Illustrator five times a week. The assignment was to choose a well-known Twitter user and make images that included the text of a tweet and some additional graphic feature. I chose <a href="http://twitter.com/sweden">@sweden</a>, an account which is given to a new, randomly selected Swede each week.</p>
 			</div>
 
