Improved responsive design features

--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Sonja Peterson</title>
+		<title>Sonja Peterson: Portfolio</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href='http://fonts.googleapis.com/css?family=Quicksand|Open+Sans' rel='stylesheet' type='text/css'>
 	</head>
