--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
 				<h2>Sonja Peterson</h2>
 			<div id="linklist">
 				<ul>
-					<a href="index.html"><li>bio</li></a>
-					<a href="projects.html"><li>projects</li></a>
+					
+					<a href="index.html"><li>portfolio</li></a>
 					<a href="contact.html" style="color: #6EB5AD;"><li>contact</li></a>
 				</ul>
 			</div>
